[package]
name = "esp32-led-matrix"
version = "0.1.0"
authors = ["LED Matrix Controller"]
edition = "2021"
license = "MIT"
description = "ESP32-C3 Rust application for controlling 88x88 RGB LED matrix with WiFi HTTP server"

[dependencies]
log = "0.4"
heapless = "0.9"

# ESP32 HAL and support crates - optional for library, required for binary
embassy-executor = { version = "0.7", optional = true }
embassy-time = { version = "0.5", optional = true }
embassy-sync = { version = "0.6", optional = true }
embedded-io-async = { version = "0.7", optional = true }
embassy-net = { version = "0.8.0", features = ["proto-ipv4", "tcp", "dhcpv4-hostname", "medium-ethernet"], optional = true }

esp-hal = { version = "1.0.0-rc.0", features = ["esp32c3", "unstable"], optional = true }
esp-hal-embassy = { version = "0.9.1", features = ["esp32c3"], optional = true }
esp-backtrace = { version = "0.18.1", features = ["esp32c3", "panic-handler", "println"], optional = true }
esp-println = { version = "0.16.1", features = ["esp32c3", "log-04"], optional = true }

esp-wifi = { version = "0.15.1", features = ["esp32c3", "wifi", "smoltcp"], optional = true }
smoltcp = { version = "0.12", default-features = false, features = [
    "proto-ipv4",
    "proto-dhcpv4",
    "socket-tcp",
    "socket-dhcpv4",
    "medium-ethernet",
    "log",
], optional = true }

critical-section = { version = "1.2", optional = true }
static_cell = { version = "2.1", optional = true }

[features]
default = ["esp32"]
esp32 = [
    "embassy-executor",
    "embassy-time",
    "embassy-sync",
    "embedded-io-async",
    "embassy-net",
    "esp-hal",
    "esp-hal-embassy",
    "esp-backtrace",
    "esp-println",
    "esp-wifi",
    "smoltcp",
    "critical-section",
    "static_cell",
]

[[bin]]
name = "esp32-led-matrix"
required-features = ["esp32"]

[lib]
name = "esp32_led_matrix"

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
